Correcciones en seccion SVM y MLP

--- a/lab2/IntroPLN2018_lab_entrega2.ipynb
+++ b/lab2/IntroPLN2018_lab_entrega2.ipynb
@@ -741,7 +741,7 @@
     "imprimir_tiempo(ti)\n",
     "\n",
     "ti = time.time()\n",
-    "print(\"Accuracy: \" + str(clfNN.score(Xval,yval)))\n",
+    "print(\"\\nAccuracy: \" + str(clfNN.score(Xval,yval)))\n",
     "print(\"Tiempo de validación: \\n\")\n",
     "imprimir_tiempo(ti)"
    ]
@@ -760,7 +760,7 @@
     "imprimir_tiempo(ti)\n",
     "\n",
     "ti = time.time()\n",
-    "print(\"Accuracy: \" + str(NN_centroide.score(X_centroide_val, y_centroide_val)))\n",
+    "print(\"\\nAccuracy: \" + str(NN_centroide.score(X_centroide_val, y_centroide_val)))\n",
     "print(\"Tiempo de validación: \\n\")\n",
     "imprimir_tiempo(ti)"
    ]
@@ -802,27 +802,29 @@
     "**Respuesta:** \n",
     "###### SVM:\n",
     "\n",
-    "En el caso de SVM, se probaron dos implementaciones del clasificador: SVM lineal sin shrinking y SVM lineal con penalización. En cuanto a la comparación entre resultados obtenidos, son similares en las dos implementaciones. En relación a la performance, la segunda resulta demorar menos. Esto deviene en que la técnica de shrinking es utilizada para ahorrar tiempo reduciendo las dimensiones del problema, por lo que es previsible que al desactivarlo demore más tanto para entrenar el modelo como para realizar predicciones.\n",
+    "En el caso de SVM, se probaron dos implementaciones del clasificador SVM: LinearSVC y SVC. En cuanto a la comparación entre resultados obtenidos, son similares en las dos implementaciones. En la primera se obtuvieron mejores resultados utilizando la representación de centroides y en la segunda se obtuvo una pequeña mejora utilizando la representación de bolsa de palabras. En relación a la performance, la segunda resulta demorar menos. Esto puede suceder por las diferencias de implementacón entre las dos funcionalides o porque el hecho de desactivar el shrinking para mejorar los resultados (lo cual cuando se activa mejora los tiempos) permite obtener mejores resultados. \n",
     "\n",
-    "Respecto a la comparación entre los resultados obtenidos para las dos representaciones, si tomamos el valor F (_Fscore_) como medida de correctitud general, se ve que el clasificador SVM con representación de centroide mejora levemente al clasificador SVM con representación de bolsa de palabras. Esto puede deberse a que la representación de centroides recoge aspectos estadísticos a un nivel más global que el caso de bag of words.\n",
+    "Respecto a la comparación entre los resultados obtenidos para las dos representaciones, si tomamos el valor F (_Fscore_) como medida de correctitud general, se ve que el clasificador SVM con representación de centroide mejora levemente al clasificador SVM con representación de bolsa de palabras. Esto puede deberse a que la representación de centroides recoge aspectos estadísticos a un nivel más global que el caso de bag of words, para la cual se consideran menos palabras.\n",
     "El otro aspecto a evaluar es que se percibe una mejora significativa en el tiempo de entrenamiento y validación para el caso en que se utiliza la representación de centroides. Esto sucede ya que los vectores de dicha representación tienen una menor cantidad de features que los que se obtienen utilizando la representación de bolsa de palabras (300 en representación de centroides, 486 en bolsa de palabras).\n",
     "\n",
     "###### SVM vs. MLP:\n",
     "\n",
-    "Para la siguiente comparación, se considerara la implementación de SVM con penalización.\n",
+    "El primer factor que salta a la vista es la diferencia de performance de tiempo computacional. El clasificador que utiliza la red neuronal posee una amplia mejora (tanto en tiempo de entrenamiento como de validación) con respecto a los dos clasificadores que utilizan SVM.\n",
     "\n",
-    "El primer factor que salta a la vista es la diferencia de performance. El clasificador que utiliza la red neuronal posee una amplia mejora (tanto en tiempo de entrenamiento como de validación) con respecto al clasificador que utiliza SVM.\n",
+    "Prosiguiendo con los resultados en la validación se puede ver que en el caso del clasificador MLP, presenta un valor F similar al clasificador SVM para el caso de la representación con centroides (considerando la implementación LinearSVC), y apenas menor para el caso de la representación de bolsa de palabras (considerando la implementación SVC).\n",
     "\n",
-    "Prosiguiendo con los resultados en la validación se puede ver que en el caso del clasificador MLP, presenta un valor F apenas mayor que el clasificador SVM. Yendo a los resultados más concretos, el clasificador MLP obtiene mejores resultados con respecto a la cantidad de ejemplos clasificados correctamente. En relación a los ejemplos clasificados incorrectamente, se obtienen resultados mixtos: el clasificador NN obtiene empeora la cantidad de falsos positivos cuando se utiliza la representación de centroides, pero reduce la cantidad de falsos negativos. Para el caso de la representación de comentarios con bolsa de palabras, se observa el mismo resultado pero intercambiando los papeles.\n",
+    "Yendo a los resultados más concretos, el clasificador LinearSVC obtiene los mejores valores con respecto a la cantidad de ejemplos clasificados correctamente. En relación a los ejemplos clasificados incorrectamente, se obtienen resultados mixtos: el clasificador MLP empeora la cantidad de falsos positivos en relación con LinearSVC (no así con SVC) cuando se utiliza la representación de centroides, pero reduce la cantidad de falsos negativos en relación a las 2 implementaciones. Para el caso de la representación de comentarios con bolsa de palabras, sucede lo mismo descrito anteriormente para los falsos negativos, pero no para los falsos positivos, en donde se obtiene el mejor resultados para SVC, seguido por el clasificador MLP y, por último, el clasificador LinearSVC.\n",
     "\n",
-    "Podemos concluir entonces que, para el corpus de comentarios, aunque los dos clasificadores arrojan resultados similares para ambas representaciones de comentarios, el clasificador NN presenta una mejora en cuanto a tiempo computacional que puede inclinar la balanza a su favor."
+    "Podemos ver estos resultados proyectados en una **precision** máxima obtenida para LinearSVC con centroides (y con un poco menos MLP con centroides) debido a la alta cantidad de ejemplos clasificados correctamente. En cuanto a la **recall**, la máxima se obtuvo para MLP con centroides. Esto nos indica que los mejores resultados se obtuvieron con LinearSVC y MLP, ambos utilizando la representación con centroides.\n",
+    "\n",
+    "Podemos concluir entonces que, para el corpus de comentarios, aunque los dos clasificadores (y las dos implementaciones del clasificador SVM) arrojan resultados similares para ambas representaciones de comentarios, el clasificador MLP presenta una mejora en cuanto a tiempo computacional y en la calidad de resultados en general que puede inclinar la balanza a su favor."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Variante de SVM utilizando clasificación lineal sin penalización**"
+    "**Clasificador SVM implementado en SVC**"
    ]
   },
   {
@@ -904,8 +906,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "printClassifierResult(SVM_centroide2, X_centroide_val, y_centroide_val, \"SVM con Centroides\")\n",
-    "printClassifierResult(clf, Xval, yval, \"SVM con Bag of Words\")"
+    "printClassifierResult(clf2, Xval, yval, \"SVM con Bag of Words\")\n",
+    "printClassifierResult(SVM_centroide2, X_centroide_val, y_centroide_val, \"SVM con Centroides\")"
    ]
   },
   {
