agrega: comentarios en el muestreo de oraciones y comentarios en casos falsos positivos, falsos negativos

--- a/lab2/IntroPLN2018_lab_entrega2.ipynb
+++ b/lab2/IntroPLN2018_lab_entrega2.ipynb
@@ -1006,6 +1006,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Al observar con detenimiento los falsos positivos y los falsos negativos, se puede ver en terminos generales que los mismos son un tanto neutros, es decir, comentarios que tienen en su contenido una mención positiva, pero que al mismo tiempo como contraste hacen notar una característica negativa, creemos que es por esta razón que se clasificaron incorrecamente por el modelos elegido. \n",
+    "\n",
+    "Tomemos algunos comentarios para ejemplificar lo que mencionamos:\n",
+    "\n",
+    "*('Excelente ambiente. El menu no tiene relación con el lugar. Caro y pretensioso.', 'NEG')*\n",
+    "- **Aspecto positivo:** el ambiente\n",
+    "- **Aspecto negativo:** el precio\n",
+    "\n",
+    "Si tuvieramos que clasificarlo lo haríamos negativo porque tiene dos oraciones negativas contra una positiva, y la palabra caro es muy negativa en estos casos, pesando más que el lugar en si mismo.\n",
+    "\n",
+    "*('El lugar está bien ambientado y al principio todos son muy amables. Fuimos a disfrutar del premio #mesadeamigos de guia oleo y casi se nos frustra el festejo por una falta de comunicación entre la gente del lugar. Solucionado el problema todo bien. Yo pedí un bife de chorizo y la carne estaba roja por dentro y quemada por fuera... las carnes no son lo más recomendable. Sí los postres que son muy ricos.', 'NEG')*\n",
+    "- **Aspecto positivo:** ambiente, amabilidad, los postres\n",
+    "- **Aspecto negativo:** falta de comunicación, mala cocción y calidad de las carnes\n",
+    "\n",
+    "Es un comentario neutro a nuestro entender, dado que el festejo no salió frustrado finalmente, y hubo apenas un problema en la cocción de la carne.\n",
+    "\n",
+    "*('el lugar excelente. un poquito lento el plato principal de sushi pero realmente excelente un abrazo a todos con el descuento de GO pagamos 180 por persona', 'POS')*\n",
+    "- **Aspecto positivo**: el lugar, el descuento\n",
+    "- **Aspecto negativo**: lento el plato principal\n",
+    "\n",
+    "Claramente un comentario positivo, suponemos que la palabra lento sucede en muchos comentarios anotados negativamente y eso hizo pesar en la predicción.\n",
+    "\n",
+    "*('Muy buen ambiente, moderno y con buen gusto. Fuimos el jueves 23 a las 20.15 y no habia demasiada gente, quizas tardaron en servir los platos pero la amabilidad estuvo bien.', 'POS')*\n",
+    "- **Aspecto positivo**: ambiente, amabilidad\n",
+    "- **Aspecto negativo**: demora habiendo poca gente\n",
+    "\n",
+    "Nuevamente un comentario positivo a nuestro entender, quizá la palabra *tardaron* debe ser una palabra con mucho peso negativo en este contexto."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Muestreo de oraciones"
    ]
   },
@@ -1036,6 +1069,35 @@
     "    \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "De los 16 comentarios clasificados, en 14 de ellos los cuatro modelos coincideron en la clasificación. Es decir que solo hubo disconcordancia en el 13% de los comentarios (2 de 16).\n",
+    "\n",
+    "Creemos que la clasificación para los 14 comentarios es correcta, dado que en ellos hay una clara connotación ya sea negativa o positiva pero no ambas a la vez, es decir, no los consideramos comentarios neutros.\n",
+    "\n",
+    "Por otro lado observamos los comentarios para los cuales no hubo unanimidad en su clasificación:\n",
+    "\n",
+    "**'las tartas no me gustaron' fue clasificado como: \n",
+    "'POS', 'POS', 'NEG', 'NEG' \n",
+    "para BOW con NN, BOW con SVM, centroide de vectores con NN y centroide de vectores con SVM respectivamente**\n",
+    "\n",
+    "A nuestro entender el comentario es claro y conciso, definitivamente negativo. Dado esto, los modelos que usaron centroide de vectores acertaron, mientras que los modelos que usaron representación BOW fallaron en su clasificación.\n",
+    "\n",
+    "Notar que para este caso *gustaron* y en particular su stem *gust* es la característica que se utilizó para clasificar. Notar que la palabra *no* revierte la connotación que tiene el stem gust, sin embargo no es considerada para la clasificación, ya que no se encuentra en el vocabulario, seguramente por haber sido filtrado al utilizar los parametros max_df y min_df.\n",
+    "\n",
+    "**'Guijón: Por favor no cambien nunca. Gracias' fue clasificado como: \n",
+    "'NEG', 'POS', 'POS', 'POS' \n",
+    "para BOW con NN, BOW con SVM, centroide de vectores con NN y centroide de vectores con SVM respectivamente**\n",
+    "\n",
+    "Nuevamente el comentario es claramente positivo, los modelos con representación de centroide nuevamente clasificaron correctamente, pero esta vez solo falló la red neuronal utilizando representación BOW.\n",
+    "\n",
+    "A diferencia con el comentario anterior, la mala clasificación radica en el modelo en si mismo y no tanto en la   representación vectorial utilizada.\n",
+    "\n",
+    "Creemos que en ambos casos la representación de centroides se ve favorecida en que sus vectores tienen mayor información ya que tienen contenido en si mismo el contexto (por utilizar vectores de palabras), lo cual hace que los vectores resultantes de cada comentario sean más representativos aportando mayor información sobre el tipo de contenido del mismo. Por otro lado, el modelo BOW solo tiene en cuenta la cantidad de ocurrencias de las palabras en un documento sobre un vocabulario conocido, creemos que en comentarios relativamente cortos y con palabras nuevas dentro del vocabulario, no contendran la suficiente información para poder clasificarlos correctamente. Esto no hace más que reconfirmar los resultados obtenidos en secciones anteriores, donde el F1 score fue mejor para los modelos que usaron representación de centroides."
+   ]
   }
  ],
  "metadata": {
@@ -1054,7 +1116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
