--- a/lab2/IntroPLN2018_lab_entrega2.ipynb
+++ b/lab2/IntroPLN2018_lab_entrega2.ipynb
@@ -807,6 +807,10 @@
     "Respecto a la comparación entre los resultados obtenidos para las dos representaciones, si tomamos el valor F (_Fscore_) como medida de correctitud general, se ve que el clasificador SVM con representación de centroide mejora levemente al clasificador SVM con representación de bolsa de palabras. Esto puede deberse a que la representación de centroides recoge aspectos estadísticos a un nivel más global que el caso de bag of words, para la cual se consideran menos palabras.\n",
     "El otro aspecto a evaluar es que se percibe una mejora significativa en el tiempo de entrenamiento y validación para el caso en que se utiliza la representación de centroides. Esto sucede ya que los vectores de dicha representación tienen una menor cantidad de features que los que se obtienen utilizando la representación de bolsa de palabras (300 en representación de centroides, 486 en bolsa de palabras).\n",
     "\n",
+    "###### MLP:\n",
+    "\n",
+    "En el caso de MLP, se probó una única implementación, MLPClassifier. Vemos que al igual que con LinearSVC, la representación de centroides mejora la precision de la red neuronal y mantiene un recall relativamente parecido a cuando se utiliza la representación de bolsa de palabras. Se ajustó el parámetro alfa de regularización de tal forma que se produjeran los mejores resultados para cada representación. Esta puede ser una de las razones, además de las mencionadas antes, por la cual se da una diferencia en el tiempo de ejecución requerido para entrenar cada clasificador, ya que cuanto menor es alfa más se intenta ajustar la función.\n",
+    "\n",
     "###### SVM vs. MLP:\n",
     "\n",
     "El primer factor que salta a la vista es la diferencia de performance de tiempo computacional. El clasificador que utiliza la red neuronal posee una amplia mejora (tanto en tiempo de entrenamiento como de validación) con respecto a los dos clasificadores que utilizan SVM.\n",
