mejora el wording ya que los comentarios analizados en los falsos no tienen un orden establecido

--- a/lab2/IntroPLN2018_lab_entrega2.ipynb
+++ b/lab2/IntroPLN2018_lab_entrega2.ipynb
@@ -1378,7 +1378,7 @@
    "source": [
     "Al observar con detenimiento los falsos positivos y los falsos negativos, se puede ver en términos generales que los mismos son un tanto neutros, es decir, comentarios que tienen en su contenido una mención positiva, pero que al mismo tiempo como contraste hacen notar una característica negativa, creemos que es por esta razón que se clasificaron incorrecamente por el modelo elegido. \n",
     "\n",
-    "Tomemos algunos comentarios para ejemplificar lo que mencionamos:\n",
+    "Para una ejecución en particular -notar que solo imprimimos 20 *falsos* sin un orden preestablecido-, tomamos algunos comentarios para ejemplificar lo que mencionamos:\n",
     "\n",
     "*('Excelente ambiente. El menu no tiene relación con el lugar. Caro y pretensioso.', 'NEG')*\n",
     "- **Aspecto positivo:** el ambiente\n",
@@ -1557,7 +1557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
